# BASIC

./: BASIC.cabal  stack.yaml
Language/: BASIC.hs
Language/BASIC/: Interp.hs  Parser.hs  Translate.hs
