Name:		BASIC
Version:	0.2.0.0
License:	BSD3
Author:		Lennart Augustsson
Maintainer:	Lennart Augustsson
Category:	Language
Synopsis:	Embedded BASIC
Description:	A simplified version of the original BASIC embedded in Haskell.
Build-type:	Simple
Build-Depends:	base, containers, tfp, llvm-tf>=9.1, random, timeit
Exposed-modules:	Language.BASIC
Other-modules:
	Language.BASIC.Interp
	Language.BASIC.Parser
	Language.BASIC.Translate
	Language.BASIC.Types
Extra-source-files:
	examples/Func.hs
	examples/Hello.hs
	examples/HiLo.hs
	examples/Infinity.hs
	examples/Makefile
